<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_movie_fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070D2D"
    tools:context=".view.activities.MovieDetailsActivity">

    <ScrollView
        android:id="@+id/scrollview_fragment_details"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_scrollview_fragment_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop_fragment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_fragment_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_fragment_details">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_cv_fragment_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/poster_fragment_details"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/description_movie_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="Overview"
                        android:textColor="#070D2D"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.049"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/poster_fragment_details" />

                    <TextView
                        android:id="@+id/genre_fragment_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/genredetails"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />

                    <TextView
                        android:id="@+id/description_fragment_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/descriptiondetails"
                        android:textColor="#070D2D"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_movie_details" />

                    <TextView
                        android:id="@+id/title_fragment_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/titledetails"
                        android:textColor="#070D2D"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/poster_fragment_details"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/vote_fragment_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Vote"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintStart_toEndOf="@+id/imageView11"
                        app:layout_constraintTop_toTopOf="@+id/imageView11" />

                    <TextView
                        android:id="@+id/avg_vote_fragment_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/avgvotedetails"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                        app:layout_constraintStart_toEndOf="@+id/imageView9"
                        app:layout_constraintTop_toTopOf="@+id/imageView9" />

                    <TextView
                        android:id="@+id/release_date_fragment_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Release Date"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                        app:layout_constraintStart_toEndOf="@+id/imageView8"
                        app:layout_constraintTop_toTopOf="@+id/imageView8"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/popularity_fragment_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Popularity"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/imageView10" />

                    <TextView
                        android:id="@+id/tagline_fragment_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/tagline"
                        android:textColor="#070D2D"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                        app:layout_constraintStart_toEndOf="@+id/imageView12"
                        app:layout_constraintTop_toTopOf="@+id/imageView12" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/imageView10"
                        app:layout_constraintTop_toBottomOf="@+id/imageView10"
                        app:srcCompat="@drawable/ic_round_clear_all_24" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/title_fragment_details"
                        app:layout_constraintTop_toBottomOf="@+id/title_fragment_details"
                        app:srcCompat="@drawable/ic_round_calendar_today_24" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/imageView8"
                        app:layout_constraintTop_toBottomOf="@+id/imageView8"
                        app:srcCompat="@drawable/ic_round_star_outline_24" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/imageView9"
                        app:layout_constraintTop_toBottomOf="@+id/imageView9"
                        app:srcCompat="@drawable/ic_round_play_circle_outline_24" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                        app:layout_constraintStart_toEndOf="@+id/avg_vote_fragment_details"
                        app:layout_constraintTop_toTopOf="@+id/imageView9"
                        app:srcCompat="@drawable/ic_round_poll_24" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/imageView7"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7"
                        app:srcCompat="@drawable/ic_round_featured_play_list_24" />

                    <TextView
                        android:id="@+id/credits_fragment_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="Top Cast"
                        android:textColor="#070D2D"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.048"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_fragment_details" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_credits"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.044"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/credits_fragment_details"
                        tools:listitem="@layout/card_credits_cast">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/production_companies_fragment_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:text="Production Companies"
                        android:textColor="#070D2D"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.078"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_credits" />

                    <HorizontalScrollView
                        android:id="@+id/scrollview_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/production_companies_fragment_details">

                        <LinearLayout
                            android:id="@+id/logo_details"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                    <!--                    <androidx.recyclerview.widget.RecyclerView-->
                    <!--                        android:id="@+id/rv_production_companies"-->
                    <!--                        android:layout_width="0dp"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_marginStart="16dp"-->
                    <!--                        android:layout_marginTop="16dp"-->
                    <!--                        android:layout_marginEnd="16dp"-->
                    <!--                        android:layout_marginBottom="16dp"-->
                    <!--                        android:orientation="horizontal"-->
                    <!--                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
                    <!--                        app:layout_constraintTop_toBottomOf="@+id/production_companies_fragment_details"-->
                    <!--                        app:layout_constraintVertical_bias="0.0"-->
                    <!--                        tools:listitem="@layout/production_companies" >-->

                    <!--                    </androidx.recyclerview.widget.RecyclerView>-->

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>